website/static/stylesheets/style.css
/* style.css */

* {
	font-family: 'Nanum Gothic', sans-serif;
}

body {
  margin: 0;
  background-color: lightblue;
}

.topnav {
  overflow: hidden;
  background-color: #333;
}

.topnav a.iow img{
	height: 48px;
	width: auto;
	float: right;
}
.fa { 
	height: 20px;
	width: auto;
}

.topnav a.navigation {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.topnav a.active {
  background-color: #4CAF50;
  color: white;
}




/*Homepage*/




h1 {
	font-weight: 800;
	text-align: center;
}


.internallinks a {
	text-align: center;
	border: 1px solid black;
  	background-color: #333;
  	color: black;
  	padding: 8px 10px;
  	font-size: 16px;
  	cursor: pointer;
  	border-color: #333;
  	color: white;
  	text-decoration: none;
}

.internallinks {
	margin: auto;
	width: 50%;
	text-align: center;
}

.homeheader {
	text-align: center;
}

#abouttext {
	width: 900px;
	margin: 0 auto;
}

#abouttext hr {
	width: 900px;
}

.sponsor {
	width: auto;
	height: 150px;
}

#sponsorimage {
	width: 900px;
	margin: 0 auto;
}


/*About Us*/
h1 {
	font-weight: 800;
	text-align: center;
}

h3.positiontitle {
	color: white;
}

.homeheader {
	text-align: center;
}

.profile img{
	height: 200px;
	width: auto;
	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
}

.caption {
	text-align: center;
}

.team {
	display: grid;
	grid-gap: 40px;
	max-width: 902px;
	grid-template-columns: 200px 200px 200px 200px;
	justify-content: center;
	align-content: center;
}

.a{
	grid-column-start: 1;
  	grid-column-end: 2;
  	text-align: center;
  }

.b{
	grid-column-start: 2;
  	grid-column-end: 3;
  	text-align: center;
  }


.c{
	grid-column-start: 3;
  	grid-column-end: 4;
  	text-align: center;
  }

.d{
	grid-column-start: 4;
  	grid-column-end: 5;
  	text-align: center;
  }

.paragraph {
	width: 902px;
	margin: 0 auto;
}

.paragraph hr {
	width: 902px;
}




/*Utility Finder*/
form hr {
	width: 15%;
}

form {
	text-align: center;
	line-height: 30px;
	height: 275px;
	overflow: auto;
}

#overlay {
  width: 440px;
  margin: 3% auto;
  height: 440px;
  background-color: rgba(255, 255, 255, 0.9);
  /*border-radius: 40px;*/
  border: 2px #333 solid;
}

#utfindertitle {
	font-size: 30px;
	position: relative;
	top: 15px;
}

#notice {
	font-size: 11px;
	text-align: center;
}

#requirement {
	font-size: 11px;
	text-align: center;
}

/*For removing the arrows inside the number input*/
/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* Search Page */

#interface {
  height: auto;
  width: 90%;
  display: grid;
  grid-template-columns: 40% 60%;
  grid-template-rows: 350px 350px;
  margin: 0px auto 50px;
  grid-gap: 5px 5px;
  margin-top: 20px;
}

#reporting {
	border-radius: 5px;
	border: 2px black solid;
	background-color: rgba(255, 255, 255, 0.9);
}

#report_text {
	width: 450px;
	height: auto;
	margin: auto;
}

#plan_link {
	width: 450px;
	height: 45px;
	border: 3px black solid;
	padding: 5px;
}

#mapfigure {
	float: right;
	height: auto;
	width: 100%;
	grid-column: 2 / 3;
	grid-row: 1 / 3;
	border-radius: 5px;
	border: 2px black solid;
}

#graphdiv {
	height: 100%;
	width: auto;
	grid-column: 1 / 2;
	grid-row: 2 / 3;
	background-color: rgba(255, 255, 255, 0.9);
	border: 2px black solid;
	border-radius: 5px;
}

#legend {
	grid-column: 2 / 3;
	grid-row: 1 / 2;
	z-index: 10;
	float: left;
	position: relative;
	top: 5px;
	left: 5px;
	height: 40px;
	width: 400px;
	border: 2px black solid;
	background-color: rgba(255, 255, 255, 0.9);
}

